third_party/rust/serde_repr/tests/ui/empty_enum.stderr
error: there must be at least one variant
 --> $DIR/empty_enum.rs:3:10
  |
3 | #[derive(Serialize_repr)]
  |          ^^^^^^^^^^^^^^

error: aborting due to previous error

